--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Based on visual inspection and page audit:",
   "main": "index.js",
   "scripts": {
+
+    "build": "npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
